--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
   <header class="navigation">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="index.html"><img class="img-fluid" src="images/logo.png" alt="parsa"></a>
+      <a class="navbar-brand" href="index.html"><img class="img-fluid" src="images/logo1.png" alt="parsa"></a>
       <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navogation"
               aria-controls="navogation" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
