--- a/index.html
+++ b/index.html
@@ -39,26 +39,12 @@
     </div>
   </div>
   <!-- /preloader -->
-  <!--<div >
-    <div class="row">
-      <div class="col-sm-6">
-        <h3 style="color:white; vertical-align:bottom; padding:10px;">
-          <br />
-          Southern Travels
-        </h3>
-      </div>
-      <div class="col-sm-6">
-        <img class="img-fluid" src="images/logo.png" alt="southern travel">
-      </div>
-    </div>
-    
-  </div>
-  <div>-->
+
     <!--<img class="img-fluid" src="images/logo2.png" alt="southern travel">-->
-    <header class="navigation">
+    <header class="navigation" style="background-color:rgb(92, 91, 91)">
       <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navba-brand" href="index.html">
-          <img class="img-fluid" src="images/logo1.png" alt="parsa">
+          <img class="img-fluid" src="images/logo-header.jpeg"  style="border-radius: 20px;" alt="EHPS">
         </a>
         <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navogation"
                 aria-controls="navogation" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,7 +54,7 @@
         <div class="collapse navbar-collapse text-center" id="navogation">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link text-ilowercase text-dark" href="index.html" id="navbarDropdown">
+              <a class="nav-link text-ilowercase text-white" href="index.html" id="navbarDropdown">
                 Home
               </a>
               <!--<div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -77,13 +63,13 @@
             </div>-->
             </li>
             <li class="nav-item">
-              <a class="nav-link text-ilowercase text-dark" href="about.html">About</a>
+              <a class="nav-link text-ilowercase text-white" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-ilowercase text-dark" href="category.html">Gallery</a>
+              <a class="nav-link text-ilowercase text-white" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-ilowercase text-dark" href="contact.html">Contact</a>
+              <a class="nav-link text-ilowercase text-white" href="contact.html">Contact</a>
             </li>
           </ul>
           <!--<form class="form-inline position-relative ml-lg-4">
@@ -94,7 +80,7 @@
         </div>
       </nav>
     </header>
-  </div>
+
 <!-- featured post -->
 <section>
   <div class="container-fluid p-sm-0">
@@ -316,7 +302,7 @@
         </article>
       </div>
     </div>
-   
+
   </div>
 </section>
 <!-- /blog post -->
@@ -335,7 +321,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
-          <a href="index.html"><img src="images/logo1.png" alt="persa" class="img-fluid"></a>
+          <a href="index.html"><img src="images/logo-footer.jpg" style="border-radius: 50%; height:100px; width:100px;" alt="EHPS" class="img-fluid"></a>
         </div>
         <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
           <h6>Address</h6>
