--- a/about.html
+++ b/about.html
@@ -40,9 +40,11 @@
   </div>
   <!-- /preloader -->
 
-  <header class="navigation">
+  <header class="navigation" style="background-color:rgb(92, 91, 91)">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="index.html"><img class="img-fluid" src="images/logo1.png" alt="parsa"></a>
+      <a class="navba-brand" href="index.html">
+        <img class="img-fluid" src="images/logo-header.jpeg"  style="border-radius: 20px;" alt="EHPS">
+      </a>
       <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navogation"
               aria-controls="navogation" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -51,7 +53,7 @@
       <div class="collapse navbar-collapse text-center" id="navogation">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link text-ilowercase text-dark" href="index.html" id="navbarDropdown">
+            <a class="nav-link text-ilowercase text-white" href="index.html" id="navbarDropdown">
               Home
             </a>
             <!--<div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -60,17 +62,17 @@
           </div>-->
           </li>
           <li class="nav-item">
-            <a class="nav-link text-ilowercase text-dark" href="about.html">About</a>
+            <a class="nav-link text-ilowercase text-white" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-ilowercase text-dark" href="category.html">Gallery</a>
+            <a class="nav-link text-ilowercase text-white" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-ilowercase text-dark" href="contact.html">Contact</a>
+            <a class="nav-link text-ilowercase text-white" href="contact.html">Contact</a>
           </li>
         </ul>
         <!--<form class="form-inline position-relative ml-lg-4">
-        <input class="form-control px-0 w-100" type="search" placeholder="Search">-->
+      <input class="form-control px-0 w-100" type="search" placeholder="Search">-->
         <!-- <button class="search-icon" type="submit"><i class="ti-search text-dark"></i></button> -->
         <!--<a href="search.html" class="search-icon"><i class="ti-search text-dark"></i></a>
       </form>-->
@@ -86,14 +88,14 @@
         <img src="images/author.jpg" alt="author" class="img-fluid w-100 mb-4">
         <h3 class="font-weight-light"> A Short Informative Brief <span class="font-weight-bold">About Us</span></h3>
         <p>
-         
+
           <ul>
             <li> 33+ Years of Experience in Recruitment Domain</li>
             <li>Executive Search | Permanent Recruitment | Contract Recruitment | Staffing Service</li>
             <li>National & International Coverage</li>
             <li>Our Highly Automated Recruitment Process Abreast with Changing Technology</li>
-          </ul>       
-         
+          </ul>
+
         </p>
       </div>
     </div>
@@ -115,7 +117,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
-          <a href="index.html"><img src="images/logo1.png" alt="persa" class="img-fluid"></a>
+          <a href="index.html"><img src="images/logo-footer.jpg" style="border-radius: 50%; height:100px; width:100px;" alt="EHPS" class="img-fluid"></a>
         </div>
         <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
           <h6>Address</h6>
