--- a/gallery.html
+++ b/gallery.html
@@ -85,7 +85,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <h4>Fashion</h4>
+        <h4>Gallery</h4>
       </div>
     </div>
   </div>
