--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <!--</section>-->
     <!-- /blog post -->
     <!-- featured post -->
-    <br>
+    <!--br>
     <section>
         <h6 class="title-border1" style="font-family: cursive, sans-serif; margin: 20px;">
             Recruitment through our company in below mentioned organizations,We are happy to announce that we have received the employment orders.
@@ -142,7 +142,7 @@
 
             </div>
         </div>
-    </section>
+    </section-->
     <!--featured post-->
     <!-- Short term courses -->
     <section>
